로그인 액티비티 추가   - 각각 배경색 추가

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,13 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#000000"
-    android:padding="20dp"
-    tools:context=".MainActivity">
+    android:background="#0000FF"
+    tools:context=".LoginActivity">
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="화면이동"/>
+
 
 </LinearLayout>
