--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,12 +40,14 @@
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/loginLoginBtn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="로그인"/>
 
         <Button
+            android:id="@+id/loginAssignBtn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
