--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,6 +14,7 @@
         android:text="이름"/>
 
     <EditText
+        android:id="@+id/loginName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:singleLine="true"/>
@@ -25,6 +26,7 @@
         android:text="회원 번호"/>
 
     <EditText
+        android:id="@+id/loginNumber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="number"/>
