--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,7 +49,7 @@
             android:text="로그인"/>
 
         <Button
-            android:id="@+id/loginAssignBtn"
+            android:id="@+id/loginSignBtn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
