--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/mainNum"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -27,6 +28,7 @@
         android:text="30번 회원"/>
 
     <TextView
+        android:id="@+id/mainName"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
