--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,6 @@
         android:gravity="center"
         android:textSize="30sp"
         android:textColor="#000000"
-        android:text="김기백"/>
+        android:text="김기백(kiback2da)"/>
 
 </LinearLayout>
